src/objects/AcctSeed__Automated_Job_Results__c.object
<CustomObject>
    <description>This object will display the results of all automated jobs from which multiple users can create reports and dashboards.</description>
    <fields>
        <fullName>AcctSeed__Failed__c</fullName>
        <inlineHelpText>The number of records that failed in the job.</inlineHelpText>
        <label>Failed</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Notes__c</fullName>
        <inlineHelpText>This field will show exception information from the jobs.</inlineHelpText>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Processed__c</fullName>
        <inlineHelpText>The number of records processed in the job.</inlineHelpText>
        <label>Processed</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Schedule_Job_Type__c</fullName>
        <inlineHelpText>List of all the recurring automated jobs that can be created under the Automation tab under Accounting Settings.</inlineHelpText>
        <label>Schedule Job Type</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Succeeded__c</fullName>
        <inlineHelpText>The number of successful records in the job.</inlineHelpText>
        <label>Succeeded</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Automated Job Result</label>
    <nameField>
        <displayFormat>AJR-{00000}</displayFormat>
        <label>Automated Job Results Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Automated Job Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>